app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/blues-man/2021-ai.git
  labels:
    app: demo-2021-ai
    app.kubernetes.io/component: demo-2021-ai
    app.kubernetes.io/instance: demo-2021-ai
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: demo-2021-ai
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.8-ubi8
  name: demo-2021-ai
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: demo-2021-ai
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo-2021-ai
        deploymentconfig: demo-2021-ai
    spec:
      containers:
      - image: quay.io/redhatdemo/2021-ai:latest
        imagePullPolicy: Always
        name: demo-2021-ai
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
