app/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/blues-man/2021-ai.git
  labels:
    app: demo-2021-ai
    app.kubernetes.io/component: demo-2021-ai
    app.kubernetes.io/instance: demo-2021-ai
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: demo-2021-ai
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.8-ubi8
  name: demo-2021-ai
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo-2021-ai
    deploymentconfig: demo-2021-ai
  sessionAffinity: None
  type: ClusterIP
